v1.1.0: per-player selection, ownership, region select, snapshots, scaling, ghosting, config GUI
- rename display name to 'Aeronautics: Tweaks & Toolkit' (mod id unchanged)
- per-player selection queues with exclusive claims and per-player outline colours
- ownership (O, SavedData) + HUD owner line + /sablesn owner commands
- Alt penetration picking available at any time; hover outline always on, group boldened
- region select rework: scroll distance, view direction, RMB corners, live preview outlines
- view lock on C, snapshots on K/R, group scaling on X + scroll (centroid-preserving)
- ghost collisions: dragged body vs dragger, scaled bodies vs all players
- Create-blueprint style box outlines for box-select/contour mode; fixed inward seam bug
- all keys are Minecraft KeyMappings; new in-game settings screen (Ctrl+O)
- fix: shared BufferSource render crash, StreamCodec.unit network error, scale never synced
- docs: rewrite README (zh/en), DESCRIPTION, add CHANGELOG.md